// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreakdownTable render 1`] = `
<div>
  <div
    class="breakdown-table-root"
  >
    <div
      class="flex-grow-1 mx-4 table-root"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit table-striped table-list table-nowrap table-head-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                class="table-head-title"
              >
                <button
                  class="inline-item text-truncate-inline btn btn-unstyled"
                  type="button"
                >
                  <div
                    class="align-items-center d-flex justify-content-between"
                  >
                    <div
                      class="text-truncate"
                    >
                      <div>
                        <span
                          class="breakdown-category"
                        >
                          EVENT
                        </span>
                        Boolean Name
                      </div>
                    </div>
                    <button
                      aria-label="Descending"
                      class="component-action ml-2 btn btn-sm btn-primary"
                      type="button"
                    >
                      <span
                        class="opacity-25"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-order-arrow icon-root"
                          role="presentation"
                        >
                          <use
                            href="#order-arrow"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </button>
              </th>
              <th
                class="table-head-title"
              >
                Events
              </th>
              <th
                class="table-head-title"
              >
                % of View Article
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class="font-weight-semibold align-top"
                data-testid="articleTitle [0]"
                rowspan="1"
              >
                <span
                  class="text-truncate"
                  data-tooltip="true"
                  title="articleTitle [0]"
                >
                  ...
                </span>
              </td>
              <td
                class="align-top"
              >
                <div
                  class="table-responsive table-root bar-comparison-root"
                >
                  <table
                    class="table"
                  >
                    <thead>
                      <tr>
                        <th
                          class="table-head-title table-column-event-name"
                        >
                          <span
                            class="text-truncate"
                            data-tooltip="false"
                            title=""
                          >
                            Event Name
                          </span>
                        </th>
                        <th
                          class="table-head-title"
                        >
                          Total Events
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr>
                        <td
                          class="table-column-event-name"
                        >
                          <span
                            class="text-truncate"
                            data-tooltip="false"
                            title=""
                          >
                            View Article
                          </span>
                        </td>
                        <td>
                          <div
                            class="metric-bar-root breakdown-table-bar"
                          >
                            <div
                              class="bar mr-2 bar-primary bar-default"
                              style="width: 67%; background-color: rgb(24, 127, 255);"
                            />
                            <div
                              class="info-wrapper align-items-center d-flex justify-content-between"
                            >
                              <span>
                                3,367
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="table-column-event-name"
                        >
                          <span
                            class="text-truncate"
                            data-tooltip="false"
                            title=""
                          >
                            Previous Value
                          </span>
                        </td>
                        <td>
                          <div
                            class="metric-bar-root breakdown-table-bar"
                          >
                            <div
                              class="bar mr-2 lines bar-primary bar-default"
                              style="width: 100%; background-color: rgb(151, 197, 255);"
                            />
                            <div
                              class="info-wrapper align-items-center d-flex justify-content-between"
                            >
                              <span>
                                5,033
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </td>
              <td
                class="align-top"
              >
                <ul
                  class="percentage-column"
                >
                  <li>
                    66.9%
                  </li>
                  <li>
                    100%
                  </li>
                </ul>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <nav
      class="navbar navbar-root pagination-bar-root"
    >
      <div
        class="container-fluid"
      >
        <div
          class="dropdown dropdown-root pagination-items-per-page"
        >
          <button
            aria-controls="clay-dropdown-menu-1"
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle button-root btn btn-sm btn-secondary"
            type="button"
          >
            2 Items
            <svg
              class="lexicon-icon lexicon-icon-caret-bottom ml-2"
              role="presentation"
            >
              <use
                href="#caret-bottom"
              />
            </svg>
          </button>
        </div>
        <div
          class="pagination-results"
        >
          Showing 1 to 1 of 1 entry.
        </div>
        <ul
          class="pagination pagination-root"
        >
          <li
            class="page-item disabled"
          >
            <button
              class="button-root btn btn-unstyled page-link btn btn-primary"
              disabled=""
              href=""
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-angle-left-small icon-root"
                role="presentation"
              >
                <use
                  href="#angle-left-small"
                />
              </svg>
            </button>
          </li>
          <li
            class="page-item active"
          >
            <button
              class="button-root btn btn-unstyled page-link btn btn-primary"
              href=""
              type="button"
            >
              1
            </button>
          </li>
          <li
            class="page-item disabled"
          >
            <button
              class="button-root btn btn-unstyled page-link btn btn-primary"
              disabled=""
              href=""
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                role="presentation"
              >
                <use
                  href="#angle-right-small"
                />
              </svg>
            </button>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</div>
`;

exports[`BreakdownTable render with single event 1`] = `
<div>
  <div
    class="breakdown-table-root breakdown-single-event"
  >
    <div
      class="table-responsive table-root bar-comparison-root"
    >
      <table
        class="table"
      >
        <thead>
          <tr>
            <th
              class="table-head-title table-column-event-name"
            >
              <span
                class="text-truncate"
                data-tooltip="false"
                title=""
              >
                Event Name
              </span>
            </th>
            <th
              class="table-head-title"
            >
              Total Events
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="table-column-event-name"
            >
              <span
                class="text-truncate"
                data-tooltip="false"
                title=""
              >
                View Article
              </span>
            </td>
            <td>
              <div
                class="metric-bar-root breakdown-table-bar"
              >
                <div
                  class="bar mr-2 bar-primary bar-default"
                  style="width: 67%; background-color: rgb(24, 127, 255);"
                />
                <div
                  class="info-wrapper align-items-center d-flex justify-content-between"
                >
                  <span>
                    3,367
                  </span>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class="table-column-event-name"
            >
              <span
                class="text-truncate"
                data-tooltip="false"
                title=""
              >
                Previous Value
              </span>
            </td>
            <td>
              <div
                class="metric-bar-root breakdown-table-bar"
              >
                <div
                  class="bar mr-2 lines bar-primary bar-default"
                  style="width: 100%; background-color: rgb(151, 197, 255);"
                />
                <div
                  class="info-wrapper align-items-center d-flex justify-content-between"
                >
                  <span>
                    5,033
                  </span>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
